<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.auth.SingUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/log_in_bg">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="28dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.041"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_keyboard_backspace_24" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/baloo_paaji"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/back"
                    app:layout_constraintVertical_bias="0.300" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/edittext_normal"
                android:ems="10"
                android:fontFamily="@font/baloo_paaji"
                android:hint="@string/username"
                android:inputType="numberPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/orig_pink" />

            <EditText
                android:id="@+id/userage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_normal"
                android:ems="10"
                android:fontFamily="@font/baloo_paaji"
                android:hint="@string/user_age"
                android:inputType="numberPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/orig_pink" />

            <EditText
                android:id="@+id/emailedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_normal"
                android:ems="10"
                android:fontFamily="@font/baloo_paaji"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/orig_pink"/>

            <EditText
                android:id="@+id/passwordedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_normal"
                android:ems="10"
                android:fontFamily="@font/baloo_paaji"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/orig_pink" />

            <Button
                android:id="@+id/log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/baloo_paaji"
                android:text="@string/sign_up"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordedittext" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>