<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.auth.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/log_in_bg">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo_paaji"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.779" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/emailedittext"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginVertical="20dp"
                        android:background="@drawable/edittext_normal"
                        android:ems="10"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/background"
                        android:textColorHint="@color/light_pink"
                        app:layout_constraintBottom_toTopOf="@+id/passwordedittext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/passwordedittext"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/edittext_normal"
                        android:ems="10"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/background"
                        android:textColorHint="@color/light_pink"
                        app:layout_constraintBottom_toTopOf="@id/forget_tv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emailedittext" />

                    <TextView
                        android:id="@+id/forget_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/forget_password"
                        android:textColor="@color/background"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@id/log_in"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.859"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/passwordedittext" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="30dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/create_account"
                        android:textColor="@color/background"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/log_in" />

                    <Button
                        android:id="@+id/log_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginVertical="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:paddingVertical="10dp"
                        android:text="@string/log_in"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/forget_tv" />


                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orig_pink"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>